<resources>
    <string name="app_name">MyChef</string>
    <string name="welcome">Hello</string>
    <string name="choose_category">Choose a Category</string>
    <string name="search">send</string>
    <string name="how_would_you_like_to_enter_your_ingredients">How would you like to enter your ingredients ?</string>
    <string name="choose_meat">MEAT</string>
    <string name="change_your_password">Change your password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confrim_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="enter_your_username_or_email_address">Enter your username or email address</string>
    <string name="username_or_email_address">Username or email address</string>
    <string name="cancel">cancel</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">log in</string>
    <string name="sign_up">sign up</string>
    <string name="forgotten_password">Forgot Password?</string>
    <string name="diet_preference">Diet Preference</string>
    <string name="log_out">Log out</string>
    <string name="already_signed_in_login">Cancel</string>
    <string name="email_address">Email address</string>
    <string name="name">Name</string>
    <string name="chiko">Chiko</string>
    <string name="Meat_Title">Meats</string>
    <string name="meat_title">Meat</string>
    <string name="ok_lable">ok</string>
    <string name="dismiss_title">Dismiss</string>
    <string name="clearall_title">Clear All</string>
    <string name="vegetables">Vegetables</string>
    <string name="seafood">Seafood</string>
    <string name="desert_snacks"><![CDATA[Dessert & Snacks]]></string>
    <string name="sauces">Sauces</string>
    <string name="dairy">Dairy</string>
    <string name="spices">Spices</string>
    <string name="fruits">Fruits</string>
    <string name="diary_lable">Dairy</string>
    <string name="baking_and_grains">Baking and Grains</string>
    <string name="fish">Fish</string>
    <string name="home">Home</string>
    <string name="my_recipe_box">My Recipe Book</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="show_recipes">Show Recipes</string>
    <string name="diet_title">Select one(or more) diets</string>
    <string name="baking_title">Baking</string>
    <string name="fish_title">Fish</string>
    <string name="desert_title">Desert</string>
    <string name="fruit_title">Fruit</string>
    <string name="sauce_title">Sauce</string>
    <string name="spice_title">Spice</string>
    <string name="seafood_title">Seafood</string>
    <string name="vegtable_title">Veg</string>
    <string name="search_title">find recipe</string>
    <string name="search_hint">Search Fruit</string>
    <string name="search_view">Enter search</string>
    <string name="show_values">show values</string>
    <string name="textview">TextView</string>
    <string name="image_description">Image Description</string>
    <string name="loading_complete">Loading Complete</string>
    <string-array name="type_of_meats">
        <item>Chicken</item>
        <item>Beef</item>
        <item>Pork</item>
        <item>Bacon</item>
        <item>Sausage</item>
        <item>Turkey</item>
        <item>Ribs</item>
        <item>Duck</item>
        <item>Oxtail</item>
        <item>Goose</item>
        <item>Rabbit</item>
        <item>Ostrich</item>
        <item>MarrowBones</item>
        <item>Salami</item>
        <item>Sheep</item>
        <item>Goat</item>
    </string-array>
    <string-array name="type_of_diary">
        <item>Butter</item>
        <item>Eggs</item>
        <item>Milk</item>
        <item>Cream</item>
        <item>Parmesan Cheese</item>
        <item>Cream Cheese</item>
        <item>Mozzarella Cheese</item>
        <item>Feta Cheese</item>
        <item>Powdered Milk</item>
        <item>Butter Cheese</item>
        <item>Ricotta Cheese</item>
        <item>Halloumi</item>
        <item>Goat Cheese</item>
        <item>Condensed Milk</item>
        <item>Yogurt</item>
        <item>Whipped Cream</item>
    </string-array>
    <string-array name="type_of_veg">
        <item>Onion</item>
        <item>Garlic</item>
        <item>Tomato</item>
        <item>Potato</item>
        <item>Carrot</item>
        <item>Bell Pepper</item>
        <item>Parsley</item>
        <item>Broccoli</item>
        <item>Corn</item>
        <item>Spinach</item>
        <item>Mushroom</item>
        <item>Green beans</item>
        <item>Ginger</item>
        <item>Rosemary</item>
        <item>Cucumber</item>
        <item>Sweet potato</item>
        <item>Pickle</item>
        <item>Avocado</item>
        <item>Olive</item>
        <item>Cabbage</item>
        <item>Cauliflower</item>
        <item>Pumpkin</item>
        <item>Squash</item>
        <item>Mint</item>
        <item>Shallot</item>
        <item>Eggplant</item>
        <item>Butternut</item>
        <item>Radish</item>
        <item>Okra</item>
        <item>Yam</item>
        <item>Kohlrabi</item>
    </string-array>
    <string-array name="type_of_seafood">
        <item>Shrimp</item>
        <item>Crab</item>
        <item>Prawns</item>
        <item>Scallop</item>
        <item>Clam</item>
        <item>Lobster</item>
        <item>Mussel</item>
        <item>Oyster</item>
        <item>Squid</item>
        <item>Calamari</item>
        <item>Crawfish</item>
        <item>Octopus</item>
        <item>Cockle</item>
        <item>Conch</item>
        <item>Sea urchin</item>
    </string-array>
    <string-array name="type_of_spice">
        <item>Cinnamon</item>
        <item>Vanilla</item>
        <item>Garlic powder</item>
        <item>Paprika</item>
        <item>Chili powder</item>
        <item>Red pepper flakes</item>
        <item>Cumin</item>
        <item>Thyme</item>
        <item>Nutmeg</item>
        <item>Bay leaf</item>
        <item>Tumeric</item>
        <item>Sea salt</item>
        <item>Herbs</item>
        <item>Salt</item>
        <item>Black pepper</item>
        <item>Chili powder</item>
        <item>White pepper</item>
        <item>Garam masala</item>
        <item>Star anise</item>
        <item>Chinese five spice</item>
        <item>Fennel seed</item>
        <item>Chipotle</item>
        <item>Beef spice</item>
        <item>Chicken spice</item>
        <item>Curry powder</item>
        <item>Steak seasoning</item>
        <item>All in one spice</item>
        <item>BBQ rub</item>
        <item>Ginger</item>
        <item>Smoked Paprika</item>
        <item>Rosemary</item>
        <item>Vanilla extract</item>
        <item>Aromat</item>
        <item>Cloves</item>
        <item>Ground Nutmeg</item>
        <item>Onion powder</item>
        <item>Sage</item>
    </string-array>
    <string-array name="type_of_sauce">
        <item>Tomato paste</item>
        <item>Mayonnaise</item>
        <item>Barbecue sauce</item>
        <item>Apple cider vinegar</item>
        <item>Oyster sauce</item>
        <item>Tomato sauce</item>
        <item>Salsa</item>
        <item>Pesto</item>
        <item>Beef gravy</item>
        <item>Curry paste</item>
        <item>Chicken gravy</item>
        <item>Cranberry sauce</item>
        <item>Turkey gravy</item>
        <item>Mushroom sauce</item>
        <item>Sausage gravy</item>
        <item>Onion gravy</item>
        <item>Soy sauce</item>
        <item>Fish sauce</item>
        <item>Honey mustard</item>
        <item>Sweet sour sauce</item>
        <item>Olive oil</item>
        <item>Cream gravy</item>
        <item>Vinegar</item>
        <item>Pork gravy</item>
        <item>Tomato gravy</item>
        <item>Chicken stock</item>
        <item>Beef broth</item>
        <item>Thousand island</item>
        <item>Sriracha</item>
        <item>French dressing</item>
        <item>Teriyaki</item>
        <item>Mustard</item>
        <item>Lamb stock</item>
        <item>Pork stock</item>
        <item>Italian dressing</item>
        <item>Salad dressing</item>
        <item>Greek dressing</item>
        <item>Sweet chili sauce</item>
        <item>Sunflower oil</item>
        <item>Cooking spray</item>
        <item>Vegetable oil</item>
        <item>Hoisin sauce</item>
        <item>Thousand island</item>
        <item>Sriracha</item>
        <item>French dressing</item>
        <item>Teriyaki</item>
        <item>Mustard</item>
        <item>Lamb stock</item>
        <item>Pork stock</item>
        <item>Italian dressing</item>
        <item>Salad dressing</item>
        <item>Greek dressing</item>
        <item>Sweet chili sauce</item>
        <item>Sunflower oil</item>
        <item>Cooking spray</item>
        <item>Vegetable oil</item>
        <item>Mushrooms</item>
        <item>Cheese</item>
        <item>Tomato</item>
        <item>Pizza Dough</item>
        <item>Chicken</item>
        <item>White Fish</item>
        <item>Potatoes</item>
        <item>Mushrooms</item>
        <item>Steak</item>
        <item>Turkey</item>
        <item>Milk</item>
        <item>Butter</item>
        <item>Onion</item>
        <item>Garlic Cloves</item>
        <item>Chicken Broth</item>
        <item>Eggs</item>
        <item>Zucchini</item>
        <item>Sausage</item>
        <item>Mozzarella</item>
        <item>Extra-Virgin Olive Oil</item>
        <item>Fontina</item>
        <item>Basil</item>
        <item>Mozzarella Cheese</item>
        <item>Spaghetti</item>
        <item>Ground beef</item>
        <item>Parsley</item>
        <item>Parmesan Cheese</item>
        <item>Bread</item>
        <item>Marinara Sauce</item>
        <item>Lamb Ragu</item>
        <item>Tomato Paste</item>
        <item>Ground Lamb</item>
        <item>Red Wine</item>
        <item>Thyme</item>
        <item>Rosemary</item>
        <item>Celery</item>
        <item>Ricotta</item>
        <item>Capers</item>
        <item>Anchovy Fillets</item>
        <item>Olives</item>






    </string-array>
    <string-array name="type_of_fruits">
        <item>Lemon</item>
        <item>Apple</item>
        <item>Banana</item>
        <item>Lime</item>
        <item>Strawberry</item>
        <item>Orange</item>
        <item>Pineapple</item>
        <item>Blueberry</item>
        <item>Raisin</item>
        <item>Coconut</item>
        <item>Grape</item>
        <item>Peach</item>
        <item>Raspberry</item>
        <item>Cranberry</item>
        <item>Mango</item>
        <item>Pear</item>
        <item>Blackberry</item>
        <item>Date</item>
        <item>Watermelon</item>
        <item>Kiwi</item>
        <item>Grapefruit</item>
        <item>Mandarin</item>
        <item>Plum</item>
        <item>Apricot</item>
        <item>Fig</item>
        <item>Tangerine</item>
        <item>Papaya</item>
        <item>Passion fruit</item>
        <item>Guava</item>
        <item>Lychee</item>
    </string-array>
</resources>