<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/categoryPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/steel_spice"
    tools:context=".CategoryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="540dp"
        android:orientation="vertical"


        app:layout_constraintTop_toBottomOf="@id/topNav"
        app:layout_constraintBottom_toTopOf="@id/menu_Pers">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"


            tools:ignore="ScrollViewSize">

            <Button
                android:id="@+id/btnChooseVeg"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"

                android:layout_marginTop="50dp"
                android:background="#ABFFFFFF"
                android:text="@string/vegetables"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FF0000"


                android:textSize="25sp"

                />


            <Button
                android:id="@+id/btnChooseSpices"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:background="#ABFFFFFF"
                android:text="@string/spice_title"

                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FF0000"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnChooseSeafood"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:background="#ABFFFFFF"
                android:text="@string/seafood"

                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FF0000"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnChooseSauces3"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:background="#ABFFFFFF"
                android:text="@string/sauces"

                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FF0000"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnChooseMeat"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:background="#ABFFFFFF"
                android:text="@string/meat_title"

                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FF0000"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnChooseFruits"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:background="#ABFFFFFF"
                android:text="@string/fruit_title"

                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FF0000"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnChooseFish"
                android:layout_width="250dp"
                android:layout_height="wrap_content"

                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:background="#ABFFFFFF"
                android:text="@string/fish"

                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FF0000"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnChooseDesert"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:background="#ABFFFFFF"
                android:text="@string/desert_snacks"

                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FF0000"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnChooseDairy"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:background="#ABFFFFFF"
                android:text="@string/diary_lable"

                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FF0000"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnChooseBaking"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:background="#ABFFFFFF"
                android:text="@string/baking_and_grains"

                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FF0000"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnShowRecipeCat"
                android:layout_height="wrap_content"

                android:layout_width="250dp"
                android:background="#D7FFFFFF"
                android:text="OK!"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="80dp"
                android:textSize="25sp"
                android:layout_gravity="right"
                android:textAllCaps="false"
                android:textColor="#3CDB45"


                />

        </LinearLayout>

    </ScrollView>









 />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/topNav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        app:itemIconSize="30dp"
        app:itemIconTint="#5F5F5F"
        app:menu="@menu/top_nav"
        tools:ignore="MissingConstraints" >




        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"

            app:srcCompat="@mipmap/ic_logo"
            tools:ignore="MissingConstraints" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/menu_Pers"
        android:layout_width="match_parent"

        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottommenu" />


</androidx.constraintlayout.widget.ConstraintLayout>